...
            Button("Register") {
               if serverAddress != chatModel.server {
                  chatModel.setServerAddress(address: serverAddress)
               }
               chatModel.registerUser(userName: userName, password: password, email: userEmail)
            }
            Button("Login") {
               if serverAddress != chatModel.server {
                  chatModel.setServerAddress(address: serverAddress)
               }
               chatModel.loginUser(userName: userName, password: password)
            }
            Button("Logout") {
...
